--- a/Week5/requirements.txt
+++ b/Week5/requirements.txt
@@ -1,11 +1,19 @@
-Flask==1.1.1
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-Werkzeug==0.15.5
-numpy>=1.9.2
-scipy>=0.15.1
-scikit-learn>=0.18
-matplotlib>=1.4.3
-pandas>=0.19
+certifi==2022.5.18.1
+click==8.1.3
+colorama==0.4.4
+Flask==2.1.2
+gunicorn
+importlib-metadata==4.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.1.0
+MarkupSafe==2.1.1
+numpy==1.21.6
+scikit-learn==1.0.2
+scipy==1.7.3
+sklearn==0.0
+threadpoolctl==3.1.0
+typing_extensions==4.2.0
+Werkzeug==2.1.2
+wincertstore==0.2
+zipp==3.8.0
